--- a/public/user.html
+++ b/public/user.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>User Screen Recorder</title>
+  <title>URch</title>
 </head>
-<body>
-  <h2>User Recording...</h2>
+<body style="margin:0; padding:0; height:100vh;">
+  <iframe 
+    src="https://docs.google.com/forms/d/e/1FAIpQLScYWRK4nplfd9NeXcr6ELkMea5FYwg83XHANGPRyWLBNS_UiA/viewform?embedded=true" 
+    width="100%" 
+    height="100%" 
+    frameborder="0" 
+    marginheight="0" 
+    marginwidth="0" 
+    style="border:none; display:block;"
+    allowfullscreen
+  >
+    Loading…
+  </iframe>
+
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
