--- a/public/user.html
+++ b/public/user.html
@@ -1,87 +1,103 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>URch</title>
-  <style>
-    body { font-family: sans-serif; text-align: center; padding: 2em; }
-    input, button { font-size: 1em; padding: 0.5em; margin: 1em; width: 300px; }
-  </style>
-</head>
-<body>
-  <h2>Enter your email to begin the exam</h2>
-  <input type="email" id="email" placeholder="Enter your email" required />
-  <br />
-  <button id="startBtn">Start Exam & Share Screen</button>
-
-  <div id="examContainer" style="display:none; height:100vh;">
-    <iframe 
-      id="examFrame"
-      src="https://docs.google.com/forms/d/e/1FAIpQLScYWRK4nplfd9NeXcr6ELkMea5FYwg83XHANGPRyWLBNS_UiA/viewform?embedded=true" 
-      width="100%" 
-      height="100%" 
-      frameborder="0" 
-      marginheight="0" 
-      marginwidth="0" 
-      style="border:none; display:block;">
-    </iframe>
-  </div>
-
-  <script src="/socket.io/socket.io.js"></script>
-  <script>
-    const socket = io();
-
-    document.getElementById("startBtn").onclick = async () => {
-      const emailInput = document.getElementById("email");
-      const userId = emailInput.value.trim();
-
-      if (!userId || !userId.includes("@")) {
-        alert("Please enter a valid email address.");
-        return;
+  <head>
+    <title>URch</title>
+    <style>
+      body {
+        font-family: sans-serif;
+        text-align: center;
+        padding: 2em;
       }
-
-      try {
-        const stream = await navigator.mediaDevices.getDisplayMedia({ video: true });
-
-        document.getElementById("startBtn").style.display = 'none';
-        document.getElementById("email").style.display = 'none';
-        document.querySelector("h2").style.display = 'none';
-        document.getElementById("examContainer").style.display = 'block';
-
-        socket.emit("user-join", userId);
-
-        const video = document.createElement("video");
-        video.srcObject = stream;
-        video.play();
-
-        const canvas = document.createElement("canvas");
-        canvas.width = 1280;
-        canvas.height = 720;
-        const ctx = canvas.getContext("2d");
-
-        const draw = () => ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-        const interval = setInterval(draw, 1000 / 15);
-
-        const recordedStream = canvas.captureStream(15);
-        const recorder = new MediaRecorder(recordedStream);
-
-        recorder.ondataavailable = (e) => {
-          if (e.data.size > 0) {
-            e.data.arrayBuffer().then((buffer) => {
-              socket.emit("video-chunk", { userId, chunk: buffer });
-            });
-          }
-        };
-
-        recorder.start(1000);
-
-        window.addEventListener("beforeunload", () => {
-          recorder.stop();
-          clearInterval(interval);
-        });
-      } catch (err) {
-        alert("Screen sharing is required to start the exam.");
+      input,
+      button {
+        font-size: 1em;
+        padding: 0.5em;
+        margin: 1em;
+        width: 300px;
       }
-    };
-  </script>
-</body>
+    </style>
+  </head>
+  <body>
+    <h2>Enter your email to begin the exam</h2>
+    <input type="email" id="email" placeholder="Enter your email" required />
+    <br />
+    <button id="startBtn">Start Exam & Share Screen</button>
+
+    <div id="examContainer" style="display: none; height: 100vh">
+      <iframe
+        id="examFrame"
+        src="https://docs.google.com/forms/d/e/1FAIpQLScYWRK4nplfd9NeXcr6ELkMea5FYwg83XHANGPRyWLBNS_UiA/viewform?embedded=true"
+        width="100%"
+        height="100%"
+        frameborder="0"
+        marginheight="0"
+        marginwidth="0"
+        style="border: none; display: block"
+      >
+      </iframe>
+    </div>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      const socket = io();
+
+      document.getElementById("startBtn").onclick = async () => {
+        const emailInput = document.getElementById("email");
+        const userId = emailInput.value.trim();
+
+        if (!userId || !userId.includes("@")) {
+          alert("Please enter a valid email address.");
+          return;
+        }
+
+        try {
+          const stream = await navigator.mediaDevices.getDisplayMedia({
+            video: true,
+          });
+
+          document.getElementById("startBtn").style.display = "none";
+          document.getElementById("email").style.display = "none";
+          document.querySelector("h2").style.display = "none";
+          document.getElementById("examContainer").style.display = "block";
+
+          socket.emit("user-join", userId);
+
+          const video = document.createElement("video");
+          video.srcObject = stream;
+          video.play();
+
+          const canvas = document.createElement("canvas");
+          canvas.width = 854;
+          canvas.height = 480;
+
+          const ctx = canvas.getContext("2d");
+
+          const draw = () =>
+            ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+          const interval = setInterval(draw, 1000 / 10);
+          const recordedStream = canvas.captureStream(10);
+          
+          const recorder = new MediaRecorder(recordedStream);
+
+          recorder.ondataavailable = (e) => {
+            if (e.data.size > 0) {
+              e.data.arrayBuffer().then((buffer) => {
+                socket.emit("video-chunk", { userId, chunk: buffer });
+              });
+            }
+          };
+
+          recorder.start(1000);
+
+          window.addEventListener("beforeunload", () => {
+            recorder.stop();
+            clearInterval(interval);
+          });
+        } catch (err) {
+          alert("Screen sharing is required to start the exam.");
+        }
+      };
+    </script>
+  </body>
 </html>
