--- a/public/user.html
+++ b/public/user.html
@@ -22,6 +22,17 @@
     <input type="email" id="email" placeholder="Enter your email" required />
     <br />
     <button id="startBtn">Start Exam & Share Screen</button>
+    <h3
+      id="timer"
+      style="
+        position: fixed;
+        top: 10px;
+        right: 20px;
+        font-size: 20px;
+        color: red;
+        z-index: 999;
+      "
+    ></h3>
 
     <div id="examContainer" style="display: none; height: 100vh">
       <iframe
@@ -40,6 +51,28 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
       const socket = io();
+      // Add countdown timer + auto-close logic
+      let secondsElapsed = 0;
+      const timerEl = document.getElementById("timer");
+
+      const timerInterval = setInterval(() => {
+        secondsElapsed++;
+
+        const minutes = Math.floor(secondsElapsed / 60);
+        const seconds = secondsElapsed % 60;
+        timerEl.textContent = `Recording: ${minutes}:${seconds
+          .toString()
+          .padStart(2, "0")}`;
+
+        if (secondsElapsed >= 120) {
+          // 2 minutes
+          clearInterval(timerInterval);
+          recorder.stop();
+          clearInterval(interval); // canvas draw
+          alert("Time is over. The exam window will now close.");
+          window.close(); // try to close tab
+        }
+      }, 1000);
 
       document.getElementById("startBtn").onclick = async () => {
         const emailInput = document.getElementById("email");
@@ -77,7 +110,7 @@
 
           const interval = setInterval(draw, 1000 / 10);
           const recordedStream = canvas.captureStream(10);
-          
+
           const recorder = new MediaRecorder(recordedStream);
 
           recorder.ondataavailable = (e) => {
