--- a/public/user.html
+++ b/public/user.html
@@ -17,7 +17,7 @@
       }
     </style>
   </head>
-  <body style="background-color: #f0ebf8;">
+  <body style="background-color: #f0ebf8">
     <h2>Enter your email to begin the exam</h2>
     <input type="email" id="email" placeholder="Enter your email" required />
     <br />
@@ -49,102 +49,97 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      const socket = io();
-      // Add countdown timer + auto-close logic
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  const socket = io();
+  let isSuspicious = false;
 
-      document.getElementById("startBtn").onclick = async () => {
-        const emailInput = document.getElementById("email");
-        const userId = emailInput.value.trim();
+  // Detect tab switch
+  document.addEventListener("visibilitychange", () => {
+    if (document.hidden) isSuspicious = true;
+  });
 
-        if (!userId || !userId.includes("@")) {
-          alert("Please enter a valid email address.");
-          return;
-        }
+  document.getElementById("startBtn").onclick = async () => {
+    const emailInput = document.getElementById("email");
+    const userId = emailInput.value.trim();
 
-        try {
-          const stream = await navigator.mediaDevices.getDisplayMedia({
-            video: true,
+    if (!userId || !userId.includes("@")) {
+      alert("Please enter a valid email address.");
+      return;
+    }
+
+    try {
+      const stream = await navigator.mediaDevices.getDisplayMedia({ video: true });
+
+      // Show exam
+      document.getElementById("startBtn").style.display = "none";
+      document.getElementById("email").style.display = "none";
+      document.querySelector("h2").style.display = "none";
+      document.getElementById("examContainer").style.display = "block";
+
+      socket.emit("user-join", userId);
+
+      // Recording setup
+      const video = document.createElement("video");
+      video.srcObject = stream;
+      video.play();
+
+      const canvas = document.createElement("canvas");
+      canvas.width = 426;
+      canvas.height = 240;
+      const ctx = canvas.getContext("2d");
+      const draw = () => ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+      const interval = setInterval(draw, 1000 / 5);
+      const recordedStream = canvas.captureStream(5);
+      const recorder = new MediaRecorder(recordedStream);
+
+      recorder.ondataavailable = (e) => {
+        if (e.data.size > 0) {
+          e.data.arrayBuffer().then((buffer) => {
+            socket.emit("video-chunk", { userId, chunk: buffer });
           });
-
-          document.getElementById("startBtn").style.display = "none";
-          document.getElementById("email").style.display = "none";
-          document.querySelector("h2").style.display = "none";
-          document.getElementById("examContainer").style.display = "block";
-
-          socket.emit("user-join", userId);
-
-          const video = document.createElement("video");
-          video.srcObject = stream;
-          video.play();
-
-          const canvas = document.createElement("canvas");
-          canvas.width = 426; // Standard width for 240p (16:9)
-          canvas.height = 240;
-
-          const ctx = canvas.getContext("2d");
-
-          const draw = () =>
-            ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-          const interval = setInterval(draw, 1000 / 5);
-          const recordedStream = canvas.captureStream(5);
-
-          const recorder = new MediaRecorder(recordedStream);
-
-          recorder.ondataavailable = (e) => {
-            if (e.data.size > 0) {
-              e.data.arrayBuffer().then((buffer) => {
-                socket.emit("video-chunk", { userId, chunk: buffer });
-              });
-            }
-          };
-
-          recorder.start(1000);
-
-          // 🕒 Countdown timer: starts only after everything is ready
-          let remainingSeconds = 120; // 2 minutes
-          const timerEl = document.createElement("h3");
-          timerEl.style.position = "fixed";
-          timerEl.style.top = "10px";
-          timerEl.style.right = "20px";
-          timerEl.style.fontSize = "20px";
-          timerEl.style.color = "red";
-          timerEl.style.zIndex = "999";
-          document.body.appendChild(timerEl);
-
-          const updateTimer = () => {
-            const minutes = Math.floor(remainingSeconds / 60);
-            const seconds = remainingSeconds % 60;
-            timerEl.textContent = `Time Left: ${minutes}:${seconds
-              .toString()
-              .padStart(2, "0")}`;
-          };
-
-          updateTimer();
-
-          const countdown = setInterval(() => {
-            remainingSeconds--;
-            updateTimer();
-
-            if (remainingSeconds <= 0) {
-              clearInterval(countdown);
-              recorder.stop();
-              clearInterval(interval); // stop canvas drawing
-              // alert("Time is up. The window will close now.");
-              window.open("", "_self"); // Fix for Chrome blocking window.close()
-              window.close(); // Try to close the tab
-            }
-          }, 1000);
-
-          window.addEventListener("beforeunload", () => {
-            recorder.stop();
-            clearInterval(interval);
-          });
-        } catch (err) {
-          alert("Screen sharing is required to start the exam.");
         }
       };
-    </script>
+
+      recorder.start(1000);
+
+      // Timer setup
+      let remainingSeconds = 120;
+      const timerEl = document.getElementById("timer");
+
+      const updateTimer = () => {
+        const minutes = Math.floor(remainingSeconds / 60);
+        const seconds = remainingSeconds % 60;
+        timerEl.textContent = `Time Left: ${minutes}:${seconds.toString().padStart(2, "0")}`;
+      };
+
+      updateTimer();
+      const countdown = setInterval(() => {
+        remainingSeconds--;
+        updateTimer();
+        if (remainingSeconds <= 0) {
+          clearInterval(countdown);
+          recorder.stop();
+          clearInterval(interval);
+          socket.emit("user-suspicion", { userId, isSuspicious });
+          window.open('', '_self');
+          window.close();
+        }
+      }, 1000);
+
+      // Clean up on close
+      window.addEventListener("beforeunload", () => {
+        socket.emit("user-suspicion", { userId, isSuspicious });
+        recorder.stop();
+        clearInterval(interval);
+      });
+
+    } catch (err) {
+      alert("Screen sharing is required to start the exam.");
+    }
+  };
+</script>
+
   </body>
 </html>
