--- a/public/admin.html
+++ b/public/admin.html
@@ -17,7 +17,7 @@
 
       function downloadWebM(userId) {
         const isSuspicious = suspicionMap[userId];
-        const filename = isSuspicious ? `${userId}_sus.webm` : `${userId}.webm`;
+        const filename =  `${userId}_${isSuspicious == 0? "": isSuspicious == 1? "sus": "xsus"}.webm`;
         const blob = new Blob(chunks[userId], { type: "video/webm" });
         const a = document.createElement("a");
         a.href = URL.createObjectURL(blob);
