--- a/public/user.html
+++ b/public/user.html
@@ -53,14 +53,58 @@
     <script>
       const socket = io();
       let isSuspicious = 0;
+      let monitoringStarted = false;
+
+      document.addEventListener("copy", (e) => e.preventDefault());
+      document.addEventListener("cut", (e) => e.preventDefault());
+      document.addEventListener("paste", (e) => e.preventDefault());
+      document.addEventListener("contextmenu", (e) => e.preventDefault());
+      document.addEventListener("keydown", (e) => {
+        // F12, Ctrl+Shift+I, Ctrl+Shift+J, Ctrl+U, Ctrl+S, Ctrl+Shift+C
+        if (
+          e.key === "F12" ||
+          (e.ctrlKey && e.shiftKey && ["I", "J", "C"].includes(e.key)) ||
+          (e.ctrlKey && ["U", "S"].includes(e.key))
+        ) {
+          e.preventDefault();
+          e.stopPropagation();
+          return false;
+        }
+      });
+
+      let devtoolsOpen = false;
+
+      setInterval(() => {
+        const threshold = 160;
+        const widthThreshold =
+          window.outerWidth - window.innerWidth > threshold;
+        const heightThreshold =
+          window.outerHeight - window.innerHeight > threshold;
+
+        if ((widthThreshold || heightThreshold) && !devtoolsOpen) {
+          devtoolsOpen = true;
+          isSuspicious = 3;
+
+          // Optional: Close the tab immediately
+          // window.open('', '_self');
+          // window.close();
+
+          // Or just log it
+          console.warn("DevTools detected");
+        }
+      }, 1000);
 
       // Detect tab switch
       document.addEventListener("visibilitychange", () => {
-        if (document.hidden) isSuspicious = 1;
+        if (monitoringStarted && document.hidden) {
+          isSuspicious = 1;
+        }
       });
 
       window.addEventListener("blur", () => {
-        isSuspicious = 2;
+        if (monitoringStarted) {
+          isSuspicious = 2;
+        }
       });
 
       document.getElementById("startBtn").onclick = async () => {
@@ -82,6 +126,7 @@
           document.getElementById("email").style.display = "none";
           document.querySelector("h2").style.display = "none";
           document.getElementById("examContainer").style.display = "block";
+          monitoringStarted = true;
 
           socket.emit("user-join", userId);
 
