--- a/public/admin.html
+++ b/public/admin.html
@@ -18,7 +18,7 @@
       function downloadWebM(userId) {
         const isSuspicious = suspicionMap[userId];
 
-        const filename =  `${userId}_${susConditions[isSuspicious]}.webm`;
+        const filename =  `${userId}_${susConditions[parseInt(isSuspicious)]}.webm`;
         const blob = new Blob(chunks[userId], { type: "video/webm" });
         const a = document.createElement("a");
         a.href = URL.createObjectURL(blob);
