--- a/public/admin.html
+++ b/public/admin.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Admin Panel</title>
+    <link rel="icon" type="image/x-icon" href="/urch_logo_trans.ico">
+
   </head>
   <body>
     <h2>Live Users</h2>
