--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>The Ultimate Renowned Chemist</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="icon" type="image/x-icon" href="/urch_logo_trans.ico">
+
   </head>
   <body class="disappear">
     <div class="white"></div>
