--- a/public/user.html
+++ b/public/user.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>URch</title>
+    <link rel="icon" type="image/x-icon" href="/urch_logo_trans.ico">
 
     <link rel="stylesheet" href="user.css" />
   </head>
