--- a/public/user.html
+++ b/public/user.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>URch</title>
-    <link rel="icon" type="image/x-icon" href="/urch_logo_trans.ico">
-
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/urch_logo_trans.ico" />
     <link rel="stylesheet" href="user.css" />
   </head>
   <body class="unscroll">
