--- a/public/user.html
+++ b/public/user.html
@@ -16,21 +16,43 @@
       <div class="container">
         <h2>Before we start</h2>
         <ol id="notes">
-          <li>You must allow screen sharing and share your entire screen.</li>
           <li>
-            Taskbar must be visible, not hidden. Moreover, unpin any pinned apps
-            on the taskbar.
+            You must allow screen sharing and share your entire screen,
+            including a visible, unhidden taskbar with no pinned apps.
           </li>
-          <li>Other tabs/windows are considered suspicious.</li>
-          <li>Using more than one monitor leads to disqualification.</li>
-          <li>DevTools or tab switching = disqualification.</li>
-          <li>Closing/refreshing the tab ends the exam.</li>
-          <li>Once the exam is opened, you will not have access again.</li>
           <li>
-            You must submit the form manually before time ends. There is no auto
-            submittion.
+            Accessing other tabs or windows is prohibited and considered
+            suspicious activity.
           </li>
-          <li>The exam ends automatically after 30 minutes.</li>
+          <li>
+            Using more than one monitor is strictly forbidden and leads to
+            disqualification.
+          </li>
+          <li>
+            Opening Developer Tools or switching tabs results in
+            disqualification.
+          </li>
+          <li>
+            Closing or refreshing the exam tab will immediately end your
+            session.
+          </li>
+          <li>You may not re-enter the exam once it has started.</li>
+          <li>
+            Camera access is required to begin; your hands must be visible for
+            at least 50% of the time.
+          </li>
+          <li>
+            Special browsers or tools are not allowed—use Google Chrome or
+            Microsoft Edge.
+          </li>
+          <li>
+            Do not use browser extensions or screen overlays during the exam.
+          </li>
+          <li>
+            You must manually submit your answers before time runs out; no
+            auto-submission is available.
+          </li>
+          <li>The exam will automatically close after 30 minutes.</li>
         </ol>
         <button class="next">I agree to these rules.</button>
       </div>
