--- a/public/admin.html
+++ b/public/admin.html
@@ -4,6 +4,14 @@
     <title>Admin Panel</title>
     <link rel="icon" type="image/svg+xml" href="/urch_logo_trans.svg" />
     <link rel="alternate icon" href="/urch_logo_trans.ico" />
+<style>
+
+  iframe {
+    width: 100vw;
+    height: calc(100vw * 9 / 16);
+  }
+</style>
+
   </head>
   <body>
     <h2>Live Users</h2>
@@ -11,8 +19,6 @@
 <!--    -->
     
 <iframe 
-  width="560" 
-  height="315" 
   src="https://www.youtube.com/embed/videoseries?list=PLSSxr3Rf2_X2oKwiy4UhzIdj4ACzB6dee&si=lZgLN859iPI8AcM7" 
   frameborder="0" 
   allow="autoplay; encrypted-media" 
