--- a/public/user.html
+++ b/public/user.html
@@ -17,42 +17,34 @@
         <h2>Before we start</h2>
         <ol id="notes">
           <li>
-            You must allow screen sharing and share your entire screen,
-            including a visible, unhidden taskbar with no pinned apps.
+            Share your full screen with a visible taskbar showing no pinned
+            apps.
+          </li>
+          <li>Accessing other tabs, windows, or apps is prohibited.</li>
+          <li>Using more than one monitor leads to disqualification.</li>
+          <li>Opening Developer Tools or switching tabs is forbidden.</li>
+          <li>Closing or refreshing the exam page ends your session.</li>
+          <li>Re-entry is not allowed after the exam starts.</li>
+          <li>
+            Camera access is required; your hands must be visible at least 50%
+            of the time.
           </li>
           <li>
-            Accessing other tabs or windows is prohibited and considered
-            suspicious activity.
+            Use only Google Chrome or Microsoft Edge. Special browsers are not
+            allowed.
+          </li>
+          <li>Disable all extensions and screen overlays.</li>
+          <li>Submit answers manually before time ends. No auto-submission.</li>
+          After you submit the exam, close the page manually to save your submition.
+          <li>Your screen, camera, and activity will be recorded.</li>
+          <li>Cheating by AI tools or communication is forbidden.</li>
+          <li>Do not disconnect Wi-Fi, sleep, or shut down your device.</li>
+          <li>
+            Camera and screen permissions must stay active until the exam ends.
           </li>
           <li>
-            Using more than one monitor is strictly forbidden and leads to
-            disqualification.
           </li>
-          <li>
-            Opening Developer Tools or switching tabs results in
-            disqualification.
-          </li>
-          <li>
-            Closing or refreshing the exam tab will immediately end your
-            session.
-          </li>
-          <li>You may not re-enter the exam once it has started.</li>
-          <li>
-            Camera access is required to begin; your hands must be visible for
-            at least 50% of the time.
-          </li>
-          <li>
-            Special browsers or tools are not allowed—use Google Chrome or
-            Microsoft Edge.
-          </li>
-          <li>
-            Do not use browser extensions or screen overlays during the exam.
-          </li>
-          <li>
-            You must manually submit your answers before time runs out; no
-            auto-submission is available.
-          </li>
-          <li>The exam will automatically close after 30 minutes.</li>
+          <li>The exam closes automatically after 30 minutes.</li>
         </ol>
         <button class="next">I agree to these rules.</button>
       </div>
