--- a/public/admin.html
+++ b/public/admin.html
@@ -5,7 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/urch_logo_trans.svg" />
     <link rel="alternate icon" href="/urch_logo_trans.ico" />
 <style>
-
+body {
+  margin: 0;
+}
   iframe {
     width: 100vw;
     height: calc(100vw * 9 / 16);
