--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
   <head>
     <title>The Ultimate Renowned Chemist</title>
     <link rel="stylesheet" href="index.css" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="alternate icon" href="/urch_logo_trans.ico" />
+    <link rel="icon" href="/favicon.ico" />
   </head>
   <body class="disappear">
     <div class="white"></div>
@@ -58,7 +57,7 @@
           const token = crypto.randomUUID();
           sessionStorage.setItem("exam-token", token); // store in session
 
-          const examWindow = window.open(`user.html?user=${token}`, "_blank");
+          const examWindow = window.open(`user?user=${token}`, "_blank");
         }, 4000);
 
         setTimeout(() => {
