--- a/public/user.html
+++ b/public/user.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>URch</title>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="alternate icon" href="/urch_logo_trans.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="user.css" />
   </head>
   <body class="unscroll">
@@ -35,7 +34,8 @@
           </li>
           <li>Disable all extensions and screen overlays.</li>
           <li>Submit answers manually before time ends. No auto-submission.</li>
-          After you submit the exam, close the page manually to save your submition.
+          After you submit the exam, close the page manually to save your
+          submition.
           <li>Your screen, camera, and activity will be recorded.</li>
           <li>Cheating by AI tools or communication is forbidden.</li>
           <li>Do not disconnect Wi-Fi, sleep, or shut down your device.</li>
@@ -45,6 +45,18 @@
           <li>The exam closes automatically after 30 minutes.</li>
         </ol>
         <button class="next">I agree to these rules.</button>
+      </div>
+    </div>
+    <div class="slide">
+      <div class="container">
+        <h2>Permissions</h2>
+        <video
+        src="https://res.cloudinary.com/drsg8lcbn/video/upload/v1752576816/Permissions_1_gljo3o.mp4"
+        autoplay
+        loop
+        muted
+        ></video>
+        <button class="next">I understand!</button>
       </div>
     </div>
     <div class="emailcont slide">
