--- a/public/3257894125@myguide.html
+++ b/public/3257894125@myguide.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>Admin Panel</title>
-    <link rel="icon" type="image/svg+xml" href="/urch_logo_trans.svg" />
-    <link rel="alternate icon" href="/urch_logo_trans.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 <style>
 body {
   margin: 0;
