--- a/public/user.html
+++ b/public/user.html
@@ -39,6 +39,7 @@
           <li>Your screen, camera, and activity will be recorded.</li>
           <li>Cheating by AI tools or communication is forbidden.</li>
           <li>Do not disconnect Wi-Fi, sleep, or shut down your device.</li>
+          <li>Make sure that your browser is logged in with the same email you use.</li>
           <li>
             Camera and screen permissions must stay active until the exam ends.
           </li>
